# telco-prediction-cloud

./: 404.html  api.py  function_app.py  index.html  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docs.yaml  main_churning-prediction-app.yml
api/: index.html
docs/: api.md  dashboard.py  index.md
search/: search_index.json
